= tefil changelog

* bin/fswiki2md: add new line after header
* bugfix for new line at the end of the stream
* Enable to use not String in the matrix for Tefil::ColumnFormer#form
* bugfix for bin/md2fswiki
* delete bin/statistics # move to gem 'malge'
* catch broken pipe and do nothing

* bin/columnform: add --transpose option

== Version 0.1.4 [2017-05-31] released

* indent width is modified to 2
* fswiki2md: enumerate from '0.' to '1.'
* add bin/statistics
* bin/columnform, left-justified is as default
* bin/columnform, preserve indent
* add bin/columnanalyze

== Version 0.1.3 [2016-05-31] released

* bin/calc can accept commandline argument

== Version 0.1.2 [2016-04-27] released

* Add bin/calc
* Add 'bin/linesub --regexp' option
* Adjust to Ruby2.3

== Version 0.1.1 [2016-03-11] released

* Add bin/eachsentence
* Add bin/fswiki2md
* Add bin/md2fswiki

== Version 0.1.0 [2015-07-07] released

* Add bin/packpercent .
* Add usage banner.
* Rename bin/formcolumn to columnform
* Add bin/indentstat .
* Add bin/indentconv .
* Module Tefil converted to class Tefil
* Delete require "tempfile" for Ruby 2.1
* Rewrite test to use capture_stdout
* Remove Tefil::TextFilterBase.filter (class method)

== Version 0.0.3 [2013-05-10] released

* Rename TextFilter to Tefil
* Add Tefil::ColumnFormer
* Add -l(left alline) option to formcolumn command.

== Version 0.0.2 [2013-04-18] released

* Adjust to builtinextension-0.1.0.

== Version 0.0.1

* Change indent character from tab to two spaces.
* Rename textfilter to linesub
* Add bin/lineescapezsh
* Add bin/formcolumn
* Add -g option to bin/linesub

== Version 0.0.0

* Initial release.