@@ -1,7 +1,7 @@
 #! /usr/bin/env ruby
 # coding: utf-8
 
-# convert to text with each line / each sentence.
+# split a line to lines.
 
 require "pp"
 require "optparse"
@@ -20,5 +20,5 @@ op.parse!(ARGV)
 
 options[:overwrite] ||= false
 
-is = Tefil::EachSentence.new options
+is = Tefil::LineSplitter.new options
 is.filter(ARGV)
