@@ -1,12 +1,14 @@
 # coding: utf-8
-class Tefil::EachSentence < Tefil::TextFilterBase
+class Tefil::LineSplitter < Tefil::TextFilterBase
 
-  END_CHAR = %w(. ? ． 。)
-  NOT_END_WORDS = ["Fig.", "FIG."]
+  END_CHARS = %w(. ? ． 。)
+  EXCEPT_WORDS = ["Fig.", "FIG."]
 
   def initialize(options = {})
     options[:smart_filename] = true
     @minimum = options[:minimum]
+    @end_chars = options[:endchars] || END_CHARS
+    @except_words = options[:excepts] || EXCEPT_WORDS
     super(options)
   end
 
@@ -18,9 +20,9 @@ class Tefil::EachSentence < Tefil::TextFilterBase
       #line.gsub!("\n", ' ')
       line.chars.each do |char|
         new_line += char
-        new_line += "\n" if (END_CHAR.include?(char))
+        new_line += "\n" if (@end_chars.include?(char))
       end
-      NOT_END_WORDS.each do |word|
+      EXCEPT_WORDS.each do |word|
         new_line.gsub!(/#{word}\n/, word)
       end
       new_line.gsub!(/\n  */, "\n")
