@@ -8,6 +8,7 @@
 * catch broken pipe and do nothing
 
 * bin/columnform: add --transpose option
+* rename: bin/eachsentence to bin/linesplit
 
 == Version 0.1.4 [2017-05-31] released
 
